--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,14 @@ services:
     ports:
       - "8080:8080"
     volumes:
-    - .:/app.ro
+      - .:/app.ro
+    environment:
+      - BOOK_COVER_BASE_URL=https://bookcover.longitood.com/bookcover
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
+    networks:
+      - app_network
+  
+networks:
+  app_network:
